--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+body {
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+padding: 40px 20px;
+background: #89CFF0;
+}
 
+.container {
+max-width: 900px;
+margin: 0 auto;
+background-color: white;
+padding: 40px;
+border-radius: 20px;
+}
