--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 padding: 40px 20px;
-background: #89CFF0;
+background: cornflowerblue;
 }
 
 .container {
@@ -10,4 +10,14 @@ margin: 0 auto;
 background-color: white;
 padding: 40px;
 border-radius: 20px;
+
+}
+
+button{
+background-color: rgba(162, 255, 235, 0.546);
+}
+
+.num{
+display: flex;
+justify-content: center;
 }
