--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ font-size: 20px;
 padding: 40px;
 border-radius: 20px;  
 }
+
+
+.score{
+	display:flex; 
+	flex-wrap:wrap; 
+	gap:10px; 
+	justify-content:center; 
+	margin-top:14px
+}
