--- a/style.css
+++ b/style.css
@@ -56,5 +56,6 @@ border-radius: 20px;
 	flex-wrap:wrap; 
 	gap:10px; 
 	justify-content:center; 
-	margin-top:14px
+	margin-top:14px;
+  font-size: 20px;
 }
