--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ border-radius: 20px;
   max-width: 900px;
 margin: 0 auto;
 background-color:#ddd;
-;
 font-size: 20px;
 padding: 40px;
 border-radius: 20px;  
@@ -59,3 +58,27 @@ border-radius: 20px;
 	margin-top:14px;
   font-size: 20px;
 }
+
+.MArk{
+  display: flex;
+justify-content: center;
+}
+
+
+.AArk{
+  display: flex;
+justify-content: center;
+}
+
+.KKrk{
+  display: flex;
+justify-content: center;
+}
+
+
+.LLrk{
+  display: flex;
+justify-content: center;
+}
+
+
