--- a/style.css
+++ b/style.css
@@ -40,13 +40,16 @@ border-radius: 20px;
 }
 
 .panel{
-    color: black;
+    color: whitesmoke;
   max-width: 900px;
 margin: 0 auto;
 background-color:#ddd;
 font-size: 20px;
-padding: 40px;
-border-radius: 20px;  
+padding: 40px; 
+ background:var(--panel); 
+	border:1px solid rgba(255,255,255,.08); 
+	border-radius:18px; 
+	padding:18px
 }
 
 
