--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ border: none;
   font-size: 4rem;
   font-weight: 700;
   color: #fff;
-  margin-bottom: 10px;
-  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;;
 }
 
 .num{
